hphp/hack/test/typecheck/class_abstract_final_7.php
<?hh // partial

abstract final class Foo {
  public static function bar() {}
}

class C {
  public function takes_complex_foo<T as Vector<varray<Awaitable<Foo>>>>(
    T $x
  ): void {}
}
